Use Bookworm with unstable openjdk-11